syntax = "proto3";

package web.v1;

option java_multiple_files = true;
option java_outer_classname = "Web";

message RegistrationsPut {
  string email = 1;
}
message RegistrationGet {
  string id = 1;
  string email = 2;
  string token = 3;
  optional string user_id = 4;
}

message ApplicationsPut {
  optional string ssn = 1;
  optional string birthdate = 2;
  optional string name = 3;
}

message ApplicationGet {
  string user_id = 1;
  string client_id = 2;
}